# devstrap

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile.test  LICENSE  README.md  RELEASE_PROCESS.md  ROADMAP.md  TODO.md  clippy.toml  config.example.toml  install.sh  test-config.toml
.github/workflows/: release.yml
src/: cli.rs  init.rs  installation.rs  lib.rs  main.rs  sync.rs  ui.rs
src/builtin/: base_packages.rs  mod.rs  packages.rs
src/commands/: installation.rs  list.rs  mod.rs  sync.rs
src/common/: command.rs  detection.rs  error.rs  mod.rs  path.rs  ui.rs  uninstall.rs
src/config/: builder.rs  config.rs  framework.rs  loader.rs  lockfile.rs  mod.rs  package.rs  package_builder.rs  package_tests.rs  parse.rs  runtime.rs  statefile.rs
src/detect/: mod.rs  os_detection.rs  pm_detection.rs  system.rs
src/domain/: config.rs  enums.rs  lockfile.rs  method.rs  mod.rs  package.rs  package_config_tests.rs  priority.rs  system.rs
src/installer/: core.rs  methods.rs  mod.rs  package_install.rs  package_orchestration.rs
src/package/: method.rs  mod.rs  priority.rs  types.rs
src/runtime/: mod.rs
src/runtime/manager/: framework_install.rs  manager_helpers.rs  mod.rs  runtime_install.rs  system_lang.rs  version_resolution.rs
src/runtime/resolver/: fnm.rs  mise.rs  mod.rs  pyenv.rs  rbenv.rs  sdkman.rs
src/service/: mod.rs  os_detection.rs  pm_detection.rs
src/service/package_manager/: installer.rs  methods.rs  mod.rs
src/service/runtime/: framework_install.rs  mod.rs  resolution.rs  runtime_install.rs  setup.rs  system_lang.rs
src/service/runtime/resolver/: fnm.rs  mise.rs  mod.rs  pyenv.rs  rbenv.rs  rustup.rs  sdkman.rs
src/usecase/: install.rs  list.rs  mod.rs  orchestration.rs  runtime_coordinator.rs
src/utils/: command.rs  detection.rs  mod.rs  path.rs  uninstall.rs
tests/: integration.rs
tests/fixtures/: Dockerfile.test  Dockerfile.test-root  README.md  test-config.toml
tests/tutorial/: Dockerfile.tutorial-test  TEST_RESULTS.md  cuj1-fresh-setup.toml  cuj2-after-removal.toml  cuj2-before-removal.toml  cuj4-team-config.toml  run-tests.sh  test-all-cujs.sh
