[package]
name = "devstrap"
version = "2.0.0"
edition = "2021"
authors = ["devstrap contributors"]
description = "Universal development environment bootstrapper"
license = "MIT"
repository = "https://github.com/devstrap/devstrap"
readme = "README.md"
rust-version = "1.75"

[[bin]]
name = "devstrap"
path = "src/main.rs"

[dependencies]
# Serialization and config parsing
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"
chrono = { version = "0.4", features = ["serde"] }

# CLI and terminal
clap = { version = "4.5", features = ["derive", "cargo"] }
colored = "3.0"
indicatif = "0.18"

# Async runtime
tokio = { version = "1.40", features = ["full"] }

# Lazy static initialization
once_cell = "1.20"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# System utilities
which = "8.0"
shellexpand = "3.1"
home = "0.5"

# Process execution
subprocess = "0.2"

# HTTP client for GitHub releases (using rustls for musl compatibility)
reqwest = { version = "0.12.23", features = ["json", "blocking", "rustls-tls"], default-features = false }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3.10"
assert_cmd = "2.0"
predicates = "3.1"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to improve optimization
strip = true        # Strip symbols from binary
panic = "abort"     # Abort on panic to reduce binary size

[lints.clippy]
# Enable pedantic rules for strict code quality (PROGRAMMING.md requirement)
pedantic = { level = "deny", priority = -1 }

# Code complexity and readability
too_many_lines = "warn"              # Functions ≤50 lines, files ≤150 lines
cognitive_complexity = "warn"        # Max 5 decision points per function
unwrap_used = "warn"                 # Prefer Result/Option handling
expect_used = "warn"                 # Prefer proper error handling
panic = "warn"                       # Avoid panics, use Result
todo = "warn"                        # No TODOs in production code
unimplemented = "warn"               # No unimplemented! in production

# Naming and style
module_name_repetitions = "allow"    # devstrap::devstrap is fine
similar_names = "allow"              # pkg/package similarity acceptable
struct_excessive_bools = "warn"      # Use enums instead of many bools

# Documentation (relaxed for internal code)
missing_errors_doc = "allow"         # Error context in code
missing_panics_doc = "allow"         # Most functions don't panic

[lints.rust]
# PROGRAMMING_V2.md requires rust linting configuration
unsafe_code = "deny"
missing_docs = { level = "warn", priority = -1 }
future_incompatible = { level = "deny", priority = -2 }